--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
+    "swagger": "^0.7.5",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
     "tsconfig-paths": "^4.2.0"
