#8 - feat: upload avatar and thumbnail

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ DB_PASS=135792468jK
 DB_NEED_DROP=false
 
 HASH_SECRET=sdfjgkldsfgjlkdsfgjlksfjl
+
+UPLOAD_ENTRY_DIR=uploads
+UPLOAD_AVATAR_PATH=uploads/avatars
+UPLOAD_THUMBNAIL_PATH=uploads/thumbnails
+UPLOAD_PATHS=UPLOAD_AVATAR_PATH,UPLOAD_THUMBNAIL_PATH
