--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,9 @@ DB_PASS=
 
 DB_NEED_DROP=
 
-HASH_SECRET=sdfjgkldsfgjlkdsfgjlksfjl
+HASH_SECRET=sdfjgkldsfgjlkdsfgjlksfjl # Can be modified
+
+UPLOAD_ENTRY_DIR=uploads
+UPLOAD_AVATAR_PATH=uploads/avatars # Must not be modified
+UPLOAD_THUMBNAIL_PATH=uploads/thumbnails # Must not be modified
+UPLOAD_PATHS=UPLOAD_AVATAR_PATH,UPLOAD_THUMBNAIL_PATH # Must not be modified
