--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
@@ -22,15 +23,18 @@
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
     "swagger": "^0.7.5",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.11",
+    "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.7.0",
     "nodemon": "^3.1.3",
     "ts-jest": "^29.1.4"
